--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_swiper : ^1.1.6
   cached_network_image: ^2.0.0
   flutter_launcher_icons: ^0.7.4
+  bottom_navy_bar: ^5.3.2
 
   
 
